@@ -37,32 +37,32 @@ import org.apache.druid.msq.indexing.cleaner.DurableStorageCleaner;
 import org.apache.druid.msq.indexing.cleaner.DurableStorageCleanerConfig;
 import org.apache.druid.storage.NilStorageConnector;
 import org.apache.druid.storage.StorageConnector;
-import org.easymock.Capture;
-import org.easymock.EasyMock;
 import org.joda.time.Duration;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
+import org.mockito.ArgumentMatchers;
+import org.mockito.Mockito;
 
-import java.util.Collection;
 import java.util.List;
 import java.util.Set;
 
 public class DurableStorageCleanerTest
 {
-  private static final TaskStorage TASK_STORAGE = EasyMock.mock(TaskStorage.class);
-  private static final TaskMaster TASK_MASTER = EasyMock.mock(TaskMaster.class);
-  private static final TaskRunner TASK_RUNNER = EasyMock.mock(TaskRunner.class);
-  private static final StorageConnector STORAGE_CONNECTOR = EasyMock.mock(StorageConnector.class);
-  private static final TaskRunnerWorkItem TASK_RUNNER_WORK_ITEM = EasyMock.mock(TaskRunnerWorkItem.class);
+  private static final TaskStorage TASK_STORAGE = Mockito.mock(TaskStorage.class);
+  private static final TaskMaster TASK_MASTER = Mockito.mock(TaskMaster.class);
+  private static final TaskRunner TASK_RUNNER = Mockito.mock(TaskRunner.class);
+  private static final StorageConnector STORAGE_CONNECTOR = Mockito.mock(StorageConnector.class);
+  private static final TaskRunnerWorkItem TASK_RUNNER_WORK_ITEM = Mockito.mock(TaskRunnerWorkItem.class);
   private static final String TASK_ID = "dummyTaskId";
   private static final String STRAY_DIR = "strayDirectory";
   private DurableStorageCleaner durableStorageCleaner;
 
-  @Before
+  @BeforeEach
   public void setUp()
   {
-    EasyMock.reset(TASK_STORAGE, TASK_RUNNER, TASK_RUNNER_WORK_ITEM, STORAGE_CONNECTOR, TASK_MASTER);
+    Mockito.reset(TASK_STORAGE, TASK_RUNNER, TASK_RUNNER_WORK_ITEM, STORAGE_CONNECTOR, TASK_MASTER);
     DurableStorageCleanerConfig durableStorageCleanerConfig = new DurableStorageCleanerConfig();
     durableStorageCleanerConfig.delaySeconds = 1L;
     durableStorageCleanerConfig.enabled = true;
@@ -78,86 +78,61 @@ public class DurableStorageCleanerTest
   @Test
   public void testRun() throws Exception
   {
-    EasyMock.expect(TASK_STORAGE.getCompletedTasksInfo(EasyMock.anyObject(), EasyMock.anyInt()))
-            .andReturn(List.of())
-            .anyTimes();
-    EasyMock.expect(STORAGE_CONNECTOR.listDir(EasyMock.anyString()))
-            .andReturn(ImmutableList.of(DurableStorageUtils.getControllerDirectory(TASK_ID), STRAY_DIR)
-                                    .stream()
-                                    .iterator())
-            .anyTimes();
-    EasyMock.expect(TASK_RUNNER_WORK_ITEM.getTaskId()).andReturn(TASK_ID)
-            .anyTimes();
-    EasyMock.expect((Collection<TaskRunnerWorkItem>) TASK_RUNNER.getRunningTasks())
-            .andReturn(ImmutableList.of(TASK_RUNNER_WORK_ITEM))
-            .anyTimes();
-    EasyMock.expect(TASK_MASTER.getTaskRunner()).andReturn(Optional.of(TASK_RUNNER)).anyTimes();
-    Capture<Set<String>> capturedArguments = EasyMock.newCapture();
-    STORAGE_CONNECTOR.deleteFiles(EasyMock.capture(capturedArguments));
-    EasyMock.expectLastCall().once();
-    EasyMock.replay(TASK_STORAGE, TASK_MASTER, TASK_RUNNER, TASK_RUNNER_WORK_ITEM, STORAGE_CONNECTOR);
+    Mockito.when(TASK_STORAGE.getCompletedTasksInfo(ArgumentMatchers.any(), ArgumentMatchers.isNull())).thenReturn(List.of());
+    Mockito.when(STORAGE_CONNECTOR.listDir(ArgumentMatchers.anyString())).thenReturn(
+        ImmutableList.of(DurableStorageUtils.getControllerDirectory(TASK_ID), STRAY_DIR).iterator()
+    );
+    Mockito.when(TASK_RUNNER_WORK_ITEM.getTaskId()).thenReturn(TASK_ID);
+    Mockito.doReturn(ImmutableList.of(TASK_RUNNER_WORK_ITEM)).when(TASK_RUNNER).getRunningTasks();
+    Mockito.when(TASK_MASTER.getTaskRunner()).thenReturn(Optional.of(TASK_RUNNER));
+    final ArgumentCaptor<Set<String>> capturedArguments = ArgumentCaptor.captor();
 
     durableStorageCleaner.run();
 
-    Assert.assertEquals(Sets.newHashSet(STRAY_DIR), capturedArguments.getValue());
+    Mockito.verify(STORAGE_CONNECTOR).deleteFiles(capturedArguments.capture());
+    Assertions.assertEquals(Sets.newHashSet(STRAY_DIR), capturedArguments.getValue());
   }
 
   @Test
   public void testRunClearsStaleOrNotFoundTask() throws Exception
   {
-    EasyMock.expect(TASK_STORAGE.getCompletedTasksInfo(EasyMock.anyObject(), EasyMock.anyInt()))
-            .andReturn(List.of())
-            .anyTimes();
-    EasyMock.expect(STORAGE_CONNECTOR.listDir(EasyMock.anyString()))
-            .andReturn(ImmutableList.of(DurableStorageUtils.getControllerDirectory(TASK_ID))
-                                    .stream()
-                                    .iterator())
-            .anyTimes();
-    EasyMock.expect(TASK_RUNNER_WORK_ITEM.getTaskId()).andReturn(TASK_ID)
-            .anyTimes();
-    EasyMock.expect((Collection<TaskRunnerWorkItem>) TASK_RUNNER.getRunningTasks())
-            .andReturn(ImmutableList.of())
-            .anyTimes();
-    EasyMock.expect(TASK_MASTER.getTaskRunner()).andReturn(Optional.of(TASK_RUNNER)).anyTimes();
-    Capture<Set<String>> capturedArguments = EasyMock.newCapture();
-    STORAGE_CONNECTOR.deleteFiles(EasyMock.capture(capturedArguments));
-    EasyMock.expectLastCall().once();
-    EasyMock.replay(TASK_STORAGE, TASK_MASTER, TASK_RUNNER, TASK_RUNNER_WORK_ITEM, STORAGE_CONNECTOR);
+    Mockito.when(TASK_STORAGE.getCompletedTasksInfo(ArgumentMatchers.any(), ArgumentMatchers.isNull())).thenReturn(List.of());
+    Mockito.when(STORAGE_CONNECTOR.listDir(ArgumentMatchers.anyString())).thenReturn(
+        ImmutableList.of(DurableStorageUtils.getControllerDirectory(TASK_ID)).iterator()
+    );
+    Mockito.when(TASK_RUNNER_WORK_ITEM.getTaskId()).thenReturn(TASK_ID);
+    Mockito.doReturn(ImmutableList.of()).when(TASK_RUNNER).getRunningTasks();
+    Mockito.when(TASK_MASTER.getTaskRunner()).thenReturn(Optional.of(TASK_RUNNER));
+    final ArgumentCaptor<Set<String>> capturedArguments = ArgumentCaptor.captor();
 
     durableStorageCleaner.run();
 
-    Assert.assertEquals(Set.of(DurableStorageUtils.getControllerDirectory(TASK_ID)), capturedArguments.getValue());
+    Mockito.verify(STORAGE_CONNECTOR).deleteFiles(capturedArguments.capture());
+    Assertions.assertEquals(Set.of(DurableStorageUtils.getControllerDirectory(TASK_ID)), capturedArguments.getValue());
   }
 
   @Test
   public void testRunExcludesQueryDirectory() throws Exception
   {
     Task completedTask = new NoopTask(TASK_ID, null, null, 1, 0, null);
-    EasyMock.expect(TASK_STORAGE.getCompletedTasksInfo(EasyMock.anyObject(), EasyMock.anyInt()))
-            .andReturn(List.of(new TaskInfo(DateTimes.of("2020-01-01"), TaskStatus.success("not-used"), completedTask)))
-            .anyTimes();
+    Mockito.when(TASK_STORAGE.getCompletedTasksInfo(ArgumentMatchers.any(), ArgumentMatchers.isNull())).thenReturn(
+        List.of(new TaskInfo(DateTimes.of("2020-01-01"), TaskStatus.success("not-used"), completedTask))
+    );
     final String resultPath = DurableStorageUtils.QUERY_RESULTS_DIR + "/" + DurableStorageUtils.getControllerDirectory(
         TASK_ID) + "/results.json";
     final String intermediateFilesPath = DurableStorageUtils.getControllerDirectory(TASK_ID) + "/intermediate.frame";
-    EasyMock.expect(STORAGE_CONNECTOR.listDir(EasyMock.anyString()))
-            .andReturn(ImmutableList.of(resultPath, STRAY_DIR, intermediateFilesPath)
-                                    .stream()
-                                    .iterator())
-            .anyTimes();
-    EasyMock.expect(TASK_MASTER.getTaskRunner()).andReturn(Optional.of(TASK_RUNNER)).anyTimes();
-    EasyMock.expect(TASK_RUNNER_WORK_ITEM.getTaskId()).andReturn(TASK_ID)
-            .anyTimes();
-    EasyMock.expect((Collection<TaskRunnerWorkItem>) TASK_RUNNER.getRunningTasks())
-            .andReturn(ImmutableList.of())
-            .anyTimes();
-    Capture<Set<String>> capturedArguments = EasyMock.newCapture();
-    STORAGE_CONNECTOR.deleteFiles(EasyMock.capture(capturedArguments));
-    EasyMock.expectLastCall().once();
-    EasyMock.replay(TASK_STORAGE, TASK_MASTER, TASK_RUNNER, TASK_RUNNER_WORK_ITEM, STORAGE_CONNECTOR);
+    Mockito.when(STORAGE_CONNECTOR.listDir(ArgumentMatchers.anyString())).thenReturn(
+        ImmutableList.of(resultPath, STRAY_DIR, intermediateFilesPath).iterator()
+    );
+    Mockito.when(TASK_MASTER.getTaskRunner()).thenReturn(Optional.of(TASK_RUNNER));
+    Mockito.when(TASK_RUNNER_WORK_ITEM.getTaskId()).thenReturn(TASK_ID);
+    Mockito.doReturn(ImmutableList.of()).when(TASK_RUNNER).getRunningTasks();
+    final ArgumentCaptor<Set<String>> capturedArguments = ArgumentCaptor.captor();
 
     durableStorageCleaner.run();
 
-    Assert.assertEquals(Sets.newHashSet(STRAY_DIR, intermediateFilesPath), capturedArguments.getValue());
+    Mockito.verify(STORAGE_CONNECTOR).deleteFiles(capturedArguments.capture());
+    Assertions.assertEquals(Sets.newHashSet(STRAY_DIR, intermediateFilesPath), capturedArguments.getValue());
   }
 
   @Test
@@ -174,7 +149,7 @@ public class DurableStorageCleanerTest
     );
 
     DutySchedule schedule = durableStorageCleaner.getSchedule();
-    Assert.assertEquals(cleanerConfig.delaySeconds * 1000, schedule.getPeriodMillis());
-    Assert.assertEquals(cleanerConfig.delaySeconds * 1000, schedule.getInitialDelayMillis());
+    Assertions.assertEquals(cleanerConfig.delaySeconds * 1000, schedule.getPeriodMillis());
+    Assertions.assertEquals(cleanerConfig.delaySeconds * 1000, schedule.getInitialDelayMillis());
   }
 }
